# trajectories-with-descartes-ROS

./: CMakeLists.txt  README.md  package.xml
src/: generacion_trayectorias.cpp
